# Project

./: README.md
CanadianExperienceLib/: HaroldFactory.cpp
MachineDemo/: MachineSystemIsolator.h  main.cpp
MachineLib/: CMakeLists.txt  Component.cpp  Component.h  Consts.h  ContactListener.cpp  ContactListener.h  DebugDraw.cpp  DebugDraw.h  IRotationSink.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  MachineAFactory.cpp  MachineAFactory.h  MachineCFactory.cpp  MachineCFactory.h  MachineDialog.cpp  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MachineSystemFactory.h  Motor.cpp  Motor.h  PhysicsPolygon.cpp  PhysicsPolygon.h  Polygon.cpp  Polygon.h  Pulley.cpp  Pulley.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h
MachineTests/: CMakeLists.txt  ComponentTest.cpp
Tests/: CMakeLists.txt
